--- a/package.json
+++ b/package.json
@@ -3,32 +3,29 @@
   "version": "1.0.0",
   "description": "this is a boiler plate",
   "main": "index.js",
-  "scripts": {
-    "test": "protractor JSFiles/config.js",
-    "pretest": "tsc",
-    "protractor": "./node_modules/protractor/built/cli.js",
-    "webdriver-update": "./node_modules/.bin/webdriver-manager update"
-  },
+  "scripts": {},
   "author": "Manish",
   "license": "ISC",
   "dependencies": {
     "@types/jasmine": "3.5.11",
     "@types/jasminewd2": "2.0.8",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "config.ts": "^1.0.0",
+    "cucumber": "^6.0.5",
+    "cucumber-pretty": "^6.0.0",
+    "cucumber-tsflow": "^3.2.0",
     "jasmine": "3.5.0",
     "protractor": "7.0.0",
-    "typescript": "^3.9.5",
     "protractor-cucumber-framework": "^6.2.1",
-    "cucumber": "^6.0.5",
-    "cucumber-tsflow": "^3.2.0",
-    "cucumber-pretty": "^6.0.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1"
+    "typescript": "^3.9.5",
+    "cucumber-html-reporter": "5.2.0"
   },
   "devDependencies": {
+    "@types/cucumber": "^6.0.1",
     "@types/jasminewd2": "2.0.8",
-    "ts-node": "8.10.2",
     "@types/node": "^14.0.13",
-    "@types/cucumber": "^6.0.1"
+    "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.1",
+    "ts-node": "8.10.2"
   }
 }
