--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "dependencies": {
     "@types/jasmine": "3.5.11",
     "@types/jasminewd2": "2.0.8",
-    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "config.ts": "^1.0.0",
     "cucumber": "^6.0.5",
+    "cucumber-html-reporter": "5.2.0",
     "cucumber-pretty": "^6.0.0",
     "cucumber-tsflow": "^3.2.0",
+    "expect.js": "^0.3.1",
     "jasmine": "3.5.0",
     "protractor": "7.0.0",
     "protractor-cucumber-framework": "^6.2.1",
-    "typescript": "^3.9.5",
-    "cucumber-html-reporter": "5.2.0"
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@types/cucumber": "^6.0.1",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^14.0.13",
+    "chai": "^4.2.0",
     "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.1",
     "ts-node": "8.10.2"
   }
